Sun Sep 20 18:40:44 1998  John Ellis  <johne@bellatlantic.net>

	* pixmaps/calculator-font.xpm: Changed to png
	* pixmaps/Makefile.am: Changed reference to above.
	* gnome-calculator.c: Changed to use the png file.
	* Makefile.am: Changed gnome-stock-imlib.h to
	pixmaps/gnome-stock-imlib.h

Mon Sep 21 00:03:03 CEST 1998  Eckehard Berns  <eb@berns.prima.de>

	* gnome-stock.c: removed some compiler warnings.
	GnomeStock is now a bit smarter concerning the background color for
	transparency and disabled pixmaps (for those of you who play
	around with the gtk styles).

Sun Sep 20 15:26:41 CEST 1998  Eckehard Berns  <eb@berns.prima.de>

	* pixmaps/: use PNG images instead of XPMs.
	* puxmaps/Makefile.am: updated to use PNGs.

Sat Sep 19 19:37:13 CEST 1998  Eckehard Berns  <eb@berns.prima.de>

	* gnome-stock.c (gnome_stock_paint): added gtk_widget_queue_draw
	* gnome-stock.[ch]: added menu versions of the timer icons

Sat Sep 19 17:24:58 CEST 1998  Eckehard Berns  <eb@berns.prima.de>

	* pixmaps/Makefile.am: removed xpm2rgb which needs a Display.
	use ../../tools/convertrgb/convertrgb to build gnome-stock-imlib.h

Sat Sep 19 12:47:35 CEST 1998  Eckehard Berns  <eb@berns.prima.de>

	* pixmaps/xpm2rgb.c pixmaps/stock_*.xpm: new files
	* pixmaps/Makefile.am: added generation of gnome-stock-imlib.h
	* gnome-stock.c: include pixmaps/gnome-stock-imlib.h

1998-09-18  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-popup-menu.c (gnome_popup_menu_new): New public function
	to create a popup menu from a GnomeUIInfo array.
	(gnome_popup_menu_attach): New public function to attach a popup
	menu to a widget -- the popup menu can be called by pressing mouse
	button 3 over the widget.  The menu can be shared between multiple
	widgets and it will be destroyed when the last widget it is
	attached to is destroyed.
	(gnome_popup_menu_do_popup): New public function to explicitly
	popup a menu.

	* gnome-app-helper.c (do_ui_signal_connect): Use