@@ -4,13 +4,37 @@ BITMAPS = calculator-font.png
 
 pixmap_DATA = $(BITMAPS)
 
-EXTRA_DIST  = $(BITMAPS)
+# Please update this when you add more `stock_*.png' files
+stock_images = 							   \
+stock_book_blue.png      stock_book_green.png      stock_book_open.png	   \
+stock_book_red.png       stock_book_yellow.png     stock_button_apply.png  \
+stock_button_cancel.png  stock_button_close.png    stock_button_no.png	   \
+stock_button_ok.png      stock_button_yes.png      stock_close.png	   \
+stock_convert.png        stock_copy.png            stock_cut.png	   \
+stock_exit.png           stock_first.png           stock_help.png	   \
+stock_home.png           stock_jump_to.png         stock_last.png	   \
+stock_left_arrow.png     stock_line_in.png         stock_mail.png	   \
+stock_mail_compose.png   stock_mail_forward.png    stock_mail_receive.png  \
+stock_mail_reply.png     stock_mail_send.png       stock_menu_about.png	   \
+stock_menu_blank.png     stock_menu_scores.png     stock_mic.png	   \
+stock_multiple_file.png  stock_new.png             stock_not.png	   \
+stock_open.png           stock_paste.png           stock_preferences.png   \
+stock_print.png          stock_properties.png      stock_redo.png	   \
+stock_refresh.png        stock_revert.png          stock_right_arrow.png   \
+stock_save.png           stock_save_as.png         stock_scores.png	   \
+stock_search.png         stock_search_replace.png  stock_spellcheck.png	   \
+stock_stop.png           stock_timer.png           stock_timer_stopped.png \
+stock_trash.png          stock_trash_full.png      stock_undelete.png	   \
+stock_undo.png           stock_volume.png
+
+EXTRA_DIST  = $(BITMAPS) $(stock_images)
 
 noinst_HEADERS = gnome-stock-imlib.h
+BUILT_SOURCES = gnome-stock-imlib.h
 
 CLEANFILES = gnome-stock-imlib.h tmp.h
 
-gnome-stock-imlib.h: Makefile $(srcdir)/stock_*.png
+gnome-stock-imlib.h: $(stock_images)
 	@echo "/* gnome stock icons in Imlib usable rgb data" >tmp.h
 	@echo " *" >>tmp.h
 	@echo " * Copyright (C) 1997 the Free Software Foundation" >>tmp.h
@@ -25,7 +49,10 @@ gnome-stock-imlib.h: Makefile $(srcdir)/stock_*.png
 	@echo " * are Copyright (C) 1998 Tuomas Kuosmanen" >>tmp.h
 	@echo " */" >>tmp.h
 	@echo >>tmp.h
-	../../tools/convertrgb/convertrgb -n -a=tmp.h $(srcdir)/stock_*.png
-	sed -e 's/stock_\(.*\)_rgb/imlib_\1/' <tmp.h >gnome-stock-imlib.h ; \
-		rm -f tmp.h
+	for i in $(stock_images); do \
+	  vn=`echo $$i | sed -e 's,stock_\(.*\)\.png,imlib_\1,'`; \
+	  ../../tools/convertrgb/convertrgb -n -v=$$vn -a=tmp.h $(srcdir)/$$i;\
+	done
+	mv tmp.h gnome-stock-imlib.h
+
 
